[gd_scene load_steps=6 format=2]

[ext_resource path="res://crafting_stations/crafting_station.gd" type="Script" id=1]
[ext_resource path="res://images/tilemaps/Objects & Extras/$CP_Container.png" type="Texture" id=3]
[ext_resource path="res://images/white_outline.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="CraftingStation" type="Node2D" groups=[
"crafting_stations",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 20, 5, 20, 20 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D"]
shape = SubResource( 2 )

[node name="UseArea" type="Area2D" parent="Sprite"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/UseArea"]
shape = SubResource( 1 )

[node name="KeyToolTip" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.8405
margin_top = -23.6865
margin_right = 21.1595
margin_bottom = -15.6865
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
modulate = Color( 0.992157, 1, 0, 1 )
margin_left = -11.0
margin_top = -13.0
margin_right = 11.0
margin_bottom = 12.0
texture = ExtResource( 4 )
draw_center = false
region_rect = Rect2( 14, 14, 4, 4 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Sprite/UseArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Sprite/UseArea" to="." method="_on_Area2D_body_exited"]
